# ImageSortAttempt

./: .gitignore  .gitmodules  Face.py  Main.py  Pipfile  logConfig.yaml  old_requirements.txt  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
Database/: Connection.py  Models.py  __init__.py
Docker/: compose.yml
LoggerHandlers/: QueueListenerHandler.py  RotatingFileHandler.py  __init__.py
Tasks/: DBManager.py  FaceManager.py  GPUManager.py  __init__.py
Utils/: FacialLikeness.py  __init__.py
