[project]
name = "ImageSort"
dynamic = ["version"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Tyler Champagne", email = "tschampagne31@gmail.com"}]
maintainers = [{name = "Tyler Champagne", email = "tschampagne31@gmail.com"}]